# yolo_image_detection

./: README.md  pyproject.toml  requirements.txt  xml2yolo_conversion.py
runs/detect/yolov8n_v8_5e/: args.yaml  results.csv
runs/detect/yolov8n_v8_5e2/: args.yaml  results.csv
runs/detect/yolov8n_v8_5e3/: args.yaml
runs/detect/yolov8n_v8_5e4/: args.yaml  results.csv
runs/detect/yolov8n_v8_5e_predict/labels/: img-131.txt  img-137.txt  img-141.txt  img-143.txt  img-156.txt  img-217.txt  img-223.txt  img-232.txt  img-248.txt  img-265.txt  img-268.txt  img-282.txt  img-302.txt  img-319.txt  img-349.txt  img-352.txt  img-357.txt  img-366.txt  img-378.txt  img-386.txt  img-388.txt  img-40.txt  img-416.txt  img-430.txt  img-439.txt  img-444.txt  img-449.txt  img-494.txt  img-503.txt  img-545.txt  img-557.txt  img-577.txt  img-583.txt  img-596.txt  img-598.txt  img-6.txt  img-611.txt  img-614.txt  img-617.txt  img-627.txt  (+4 more)
runs/detect/yolov8n_v8_5e_predict2/labels/: img-10.txt  img-121.txt  img-127.txt  img-133.txt  img-138.txt  img-161.txt  img-169.txt  img-190.txt  img-193.txt  img-205.txt  img-22.txt  img-231.txt  img-241.txt  img-25.txt  img-257.txt  img-26.txt  img-263.txt  img-270.txt  img-275.txt  img-28.txt  img-290.txt  img-313.txt  img-35.txt  img-365.txt  img-368.txt  img-395.txt  img-435.txt  img-440.txt  img-470.txt  img-472.txt  img-529.txt  img-537.txt  img-551.txt  img-555.txt  img-594.txt  img-60.txt  img-646.txt  img-68.txt  img-76.txt
yolo_dataset/: data.yaml
yolo_dataset/labels/: train.cache  val.cache
(+42 files in other folders)
