[project]
name = "yolo-image-detection"
version = "0.1.0"
description = "YOLO object detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.146",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
